--- a/database/database.csproj
+++ b/database/database.csproj
@@ -90,11 +90,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>dbDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="delivery.cs">
+    <Compile Include="Delivery.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="delivery.Designer.cs">
-      <DependentUpon>delivery.cs</DependentUpon>
+    <Compile Include="Delivery.Designer.cs">
+      <DependentUpon>Delivery.cs</DependentUpon>
     </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -137,8 +137,8 @@
     <EmbeddedResource Include="Customer.resx">
       <DependentUpon>Customer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="delivery.resx">
-      <DependentUpon>delivery.cs</DependentUpon>
+    <EmbeddedResource Include="Delivery.resx">
+      <DependentUpon>Delivery.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
